# meta-pseudo-labels

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: mnist.yml
scripts/: train.sh
src/mpl_tf/: __init__.py  cli.py
src/mpl_tf/data/: __init__.py  base.py  mnist.py
src/mpl_tf/models/: __init__.py  base.py  cnn.py
src/mpl_tf/training/: trainer.py
