[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl-tf"
version = "0.1.0"
authors = [{name = "Syahrul Hidayat", email = "syah.hidayat71@gmail.com"}]
description = "Reference TensorFlow implementation of Meta Pseudo Labels."
dependencies = [
    "tensorflow>=2.17",
    "numpy",
    "tqdm",
]

[project.scripts]
mpl-tf = "mpl_tf.cli:main"